lista plac dwie zeminne w miesiacau

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -65,7 +65,7 @@
                                     <p:inputText id="seriainrzwolnienia" value="#{nieobecnoscView.selected.seriainrzwolnienia}" title="seria i nr zw."/>
                                     <p:outputLabel value="procent" for="procent" />
                                     <p:inputText  id="procent" value="#{nieobecnoscView.selected.zwolnienieprocent}" title="procent zwolenienia" />
-                                    <p:outputLabel value="średnia zmienne" />
+                                    <p:outputLabel value="średnia brutto-13.71%" />
                                     <bcf:inputpl  value="#{nieobecnoscView.selected.sredniazmiennerecznie}"/>
                                 </p:panelGrid>
                              </p:fragment>
