--- a/kadry/src/main/webapp/login.xhtml
+++ b/kadry/src/main/webapp/login.xhtml
@@ -66,6 +66,10 @@
                         </p:commandButton>
                     </p:panelGrid>
                 </p:panel>
+                <p:panel style="margin-top: 2%; margin-left: auto; margin-right: auto; width: 380px">
+                    <p:messages/>
+                </p:panel>
+                    
             </h:form>
         </h:body>
     
