--- a/kadry/src/main/webapp/umowa/sub/dane1_ekwiwalent_urlop.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_ekwiwalent_urlop.xhtml
@@ -25,12 +25,14 @@
                             
                             <p:outputLabel value="niewykorzystany rok poprzedni dni" for="urloplpop" />
                             <h:outputText id="urloplpop" value="#{pracownikEkwiwalentView.ekwiwalent.zalegly}" />
+                            <p:outputLabel value="miesiące wzięte do wymiaru w roku bież." for="urloplp1ea11" />
+                            <h:outputText id="urloplp1ea11" value="#{pracownikEkwiwalentView.urlopprezentacja.listamiesiecy}" />
                             <p:outputLabel value="wymiar na dzień naliczenia dni" for="urloplp1e" />
                             <h:outputText id="urloplp1e" value="#{pracownikEkwiwalentView.ekwiwalent.biezacy}" />
                             <p:outputLabel value="razem" for="urloplp1e1" style="color: green"/>
                             <h:outputText id="urloplp1e1" value="#{pracownikEkwiwalentView.ekwiwalent.razembiezacyzalegly}"  style="color: green"/>
 <!--                            <p:outputLabel value="wykorzystane godziny urlopu rok bież." for="urloplp1eaa" />
-                            <h:outputText id="urloplp1eaa" value="#{pracownikEkwiwalentView.urlopprezentacja.wykorzystanierokbiezacy}" />-->
+                            <h:outputText id="urloplp1eaa" value="#{pracownikEkwiwalentView.urlopprezentacja.wykorzystanierokbiezacy}" />-->                
                             <p:outputLabel value="wykorzystane dni urlopu rok bież." for="urloplp1ea" />
                             <h:outputText id="urloplp1ea" value="#{pracownikEkwiwalentView.urlopprezentacja.wykorzystanierokbiezacydni}" />
 <!--                            <p:outputLabel value="suma do wypł. rok bież+poprzedni godziny" for="urloplpop1" />
