--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_nadgodziny_niemcy.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_nadgodziny_niemcy.xhtml
@@ -22,7 +22,7 @@
             <p:panelGrid columns="1">
                 <h:form  styleClass="formadmin" id="NadgodzinyNiemcyForm">
                     <h:panelGroup id="display">
-                        <h:outputText value="Na liście znajdują się tylko pracownicy ze stawką godzinową za oddelegowanie kod 13"
+                        <h:outputText value="Na liście znajdują się tylko pracownicy ze stawką godzinową za oddelegowanie kod 13. Norma godzin pracy w Niemczech jest wyliczana ponownie w przypadku recznej edycji ilosci dni w oddelegowaniu."
                                       style="color: green;"/>
                         <p:panelGrid columns="4" style="margin-top: 20px;">
                             <p:panelGrid columns="2">
