--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wyliczenie_porownaniezBO.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wyliczenie_porownaniezBO.xhtml
@@ -31,23 +31,27 @@
             </script>
              <p:panelGrid columns="11">
                 <p:panelGrid columns="4" rendered="#{!ukladBRView.listarokbiezacy.isEmpty()}">
-                    <h:outputText value="#{mgs.nazwaukładu}"/>
+<!--                    <h:outputText value="#{mgs.nazwaukładu}"/>
                     <p:selectOneMenu value="#{pozycjaBRView.uklad}" converter="#{ukladBRConv}">
                         <f:selectItems value="#{ukladBRView.listarokbiezacy}" var="loop" itemLabel="#{loop.uklad} - #{loop.rok}" itemValue="#{String.valueOf(loop.lp)}"/>
                         <p:ajax event="change" listener="#{pozycjaBRView.zmianaukladprzegladBilansBO()}" update=":form_dialogbilansporownanie"/>
-                    </p:selectOneMenu>
+                    </p:selectOneMenu>-->
                     <p:column>
-                    <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}">
+                        <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}">
                         <p:ajax event="change" listener="#{pozycjaBRView.obliczBilansOtwarciaBilansDataWybierz()}" update=":form_dialogbilansporownanie" />
                         <f:selectItems value="#{mce.mceList}"/>
                     </p:selectOneMenu>
                     </p:column>
                     <p:commandButton value="#{mgs.wybierzmcrok}" style="width: 120px;" type="submit" actionListener="#{pozycjaBRView.obliczBilansOtwarciaBilansDataWybierz()}" update=":form_dialogbilansporownanie"/>
+                    <h:outputText value="układ: " style="margin-left: 20px;" rendered="#{ukladBRView.listarokbiezacy.isEmpty() eq false}"/>
+                    <h:outputText value="#{pozycjaBRView.uklad.uklad}" style="color: green;" rendered="#{ukladBRView.listarokbiezacy.isEmpty() eq false}"/>
+                    <h:outputText value="brak układu na rok bieżący" style="color: red;" rendered="#{ukladBRView.listarokbiezacy.isEmpty()}"/>
                 </p:panelGrid>
 <!--                 <p:commandButton id="rozwinwsz" value="rozwiń wszystkie" actionListener="#{pozycjaBRView.rozwinwszystkie()}" update=":form_dialogbilansporownanie:dataList" style="float: left;" />
                  <p:commandButton id="rozwin" value="rozwiń poziom" actionListener="#{pozycjaBRView.rozwin()}" update=":form_dialogbilansporownanie:dataList" style="float: left;" />
                  <p:commandButton id="zwinwsz" value="zwiń wszystkie" actionListener="#{pozycjaBRView.zwinwszystkie()}" update=":form_dialogbilansporownanie:dataList" style="float: left;" />
-                 <p:commandButton id="zwinw" value="zwiń poziom" actionListener="#{pozycjaBRView.zwin()}" update=":form_dialogbilansporownanie:dataList" style="float: left;" />--><h:outputText value="brak układu na rok bieżący" style="color: red;" rendered="#{ukladBRView.listarokbiezacy.isEmpty()}"/>
+                 <p:commandButton id="zwinw" value="zwiń poziom" actionListener="#{pozycjaBRView.zwin()}" update=":form_dialogbilansporownanie:dataList" style="float: left;" />-->
+                    
                     <p:panelGrid columns="9" style="margin-left: 150px;" rendered="#{!ukladBRView.listarokbiezacy.isEmpty()}">
                      <p:commandButton value="#{mgs.drukuj}" styleClass="nb"  style="margin-left: 30px;" type="submit" action="#{sesjaView.dodajwydruk()}" actionListener="#{pozycjaBRView.drukujBilansBODataAP('x', pozycjaBRView.sumabilansowapasywaBO, pozycjaBRView.sumabilansowaaktywa, pozycjaBRView.sumabilansowapasywa)}">
                       </p:commandButton>
